--- a/book-exercises/pom.xml
+++ b/book-exercises/pom.xml
@@ -69,6 +69,17 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <configuration>
+                <mainClass>io.book.exercises.App</mainClass>
+                <arguments>
+                    <argument>argument1</argument>
+                </arguments>
+            </configuration>
+            </plugin>
       </plugins>
     </pluginManagement>
   </build>
